correction for title overflow on small widths

--- a/assets/scss/devresume.scss
+++ b/assets/scss/devresume.scss
@@ -117,6 +117,16 @@ a.theme-link {
 
 }
 
+@media only screen and (max-width: 992px) {
+	.resume-title img {
+		height:2em;
+	}
+	.resume-name {
+		font-size: 2rem;
+		vertical-align:top;
+	}
+  }
+
 .resume-tagline {
 	font-size: 1.25rem;
 	font-weight: 300;
